tests/fixtures/invalid/const_aggregate_field_nested_assignment.c
struct Point {
    int x;
    int y;
};

struct Box {
    const struct Point point;
};

int main(void) {
    struct Box box = {{1, 2}};
    box.point.x = 3;
    return box.point.x;
}
